src/test/deca/context/valid/objet/fields.deca
class A {
    int x;
    int y;
    String s;
}
