src/test/deca/context/invalid/int_object_assign.deca
/*
    Description : Assignation d'un objet à un entier

    Resultat : Erreur contextuelle
*/
class X{

}
class A{
    X y;
    int x = y;
}
